# mcp-chat

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: README.md
docs/fast-mcp/: llms.txt
docs/implementation/: technical-decisions.md
docs/planning/: implementation-plan.md  long-polling-design.md  mvp-plan.md  overview.md  terminal-client-plan.md
docs/technical/: communication-patterns.md  notifications-guide.md
docs/usage/: quick-test.md  running-server.md  testing-guide.md
mcp_chat/: __init__.py  managers.py  models.py  server.py
static/: demo.cast
