[project]
name = "mcp-chat"
version = "0.1.0"
description = "MCP server that connects people for random chat conversations"
readme = "README.md"
authors = [
    { name = "PI Project Autonomo", email = "z@nerdsniped.lol" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
mcp-chat = "mcp_chat.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.11"
strict = true
# Ignore untyped decorators from FastMCP
disable_error_code = ["misc"]

[tool.ruff]
target-version = "py311"
line-length = 88
